Test/exports/SubModuleDefaultExport.dfy.expect
SubModuleDefaultExport.dfy(15,17): Error: module 'SubE' does not declare a type 'TT'
SubModuleDefaultExport.dfy(18,15): Error: arguments must have the same type (got SubE.T and bool)
2 resolution/type errors detected in SubModuleDefaultExport.dfy
